editors/tree-sitter-lira/grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $._declaration,
      $._statement,
    ),

    // =========================================================================
    // DECLARATIONS
    // =========================================================================

    function_declaration: $ => seq(
      optional($.visibility),
      optional('async'),
      'fn',
      field('name', $.identifier),
      optional($.type_parameters),
      field('parameters', $.parameters),
      optional(seq('->', field('return_type', $._type))),
      optional($.where_clause),
      choice(
        field('body', $.block),
        seq('=>', field('body', $._expression)),
      ),
    ),

    parameters: $ => seq(
      '(',
      optional(seq(
        commaSep1($.parameter),
        optional(','),
      )),
      ')',
    ),

    parameter: $ => choice(
      // self parameter (method receiver)
      seq(optional('mut'), 'self'),
      // Regular parameter: name, optional type, optional default
      seq(
        optional('mut'),
        field('name', $.identifier),
        optional(seq(':', field('type', $._type))),
        optional(seq('=', field('default', $._expression))),
      ),
      // Type-only parameter (for function types)
      seq(':', field('type', $._type)),
    ),

    // Struct declaration
    struct_declaration: $ => seq(
      optional($.visibility),
      'struct',
      field('name', $.type_identifier),
      optional($.type_parameters),
      optional($.where_clause),
      choice(
        $.struct_body,
        seq('(', commaSep($.tuple_field), ')'),
      ),
    ),

    struct_body: $ => seq(
      '{',
      repeat(choice($.struct_field, $.method_declaration)),
      '}',
    ),

    struct_field: $ => seq(
      optional($.visibility),
      field('name', $.identifier),
      ':',
      field('type', $._type),
      optional(','),
    ),

    tuple_field: $ => seq(
      optional($.visibility),
      field('type', $._type),
    ),

    // Class declaration
    class_declaration: $ => seq(
      optional($.visibility),
      optional('abstract'),
      'class',
      field('name', $.type_identifier),
      optional($.type_parameters),
      optional(seq('extends', field('superclass', $._type))),
      optional(seq(':', commaSep1(field('interfaces', $._type)))),
      optional($.where_clause),
      $.class_body,
    ),

    class_body: $ => seq(
      '{',
      repeat(choice(
        $.class_field,
        $.method_declaration,
      )),
      '}',
    ),

    class_field: $ => seq(
      optional($.visibility),
      choice('let', 'var'),
      field('name', $.identifier),
      ':',
      field('type', $._type),
      optional(seq('=', field('value', $._expression))),
    ),

    method_declaration: $ => seq(
      optional($.visibility),
      optional('static'),
      optional('abstract'),
      optional('override'),
      optional('async'),
      'fn',
      field('name', $.identifier),
      optional($.type_parameters),
      field('parameters', $.parameters),
      optional(seq('->', field('return_type', $._type))),
      optional($.where_clause),
      choice(
        field('body', $.block),
        seq('=>', field('body', $._expression)),
        // Abstract methods have no body
      ),
    ),

    // Enum declaration
    enum_declaration: $ => seq(
      optional($.visibility),
      'enum',
      field('name', $.type_identifier),
      optional($.type_parameters),
      optional($.where_clause),
      $.enum_body,
    ),

    enum_body: $ => seq(
      '{',
      commaSep($.enum_variant),
      optional(','),
      '}',
    ),

    enum_variant: $ => seq(
      field('name', $.identifier),
      optional(choice(
        seq('(', commaSep($._type), ')'),
        $.struct_body,
      )),
    ),

    // Trait declaration
    trait_declaration: $ => seq(
      optional($.visibility),
      'trait',
      field('name', $.type_identifier),
      optional($.type_parameters),
      optional(seq(':', commaSep1($.trait_bound))),
      optional($.where_clause),
      $.trait_body,
    ),

    trait_body: $ => seq(
      '{',
      repeat($.trait_method),
      '}',
    ),

    trait_method: $ => seq(
      optional($.visibility),
      optional('async'),
      'fn',
      field('name', $.identifier),
      optional($.type_parameters),
      field('parameters', $.parameters),
      optional(seq('->', field('return_type', $._type))),
      optional($.where_clause),
      optional(choice(
        field('body', $.block),
        seq('=>', field('body', $._expression)),
      )),
    ),

    // Interface declaration
    interface_declaration: $ => seq(
      optional($.visibility),
      'interface',
      field('name', $.type_identifier),
      optional($.type_parameters),
      optional(seq(':', commaSep1($.trait_bound))),
      optional($.where_clause),
      $.trait_body,
    ),

    // Impl block
    impl_block: $ => seq(
      'impl',
      optional($.type_parameters),
      optional(seq(
        field('trait', $._type),
        'for',
      )),
      field('type', $._type),
      optional($.where_clause),
      $.impl_body,
    ),

    impl_body: $ => seq(
      '{',
      repeat($.method_declaration),
      '}',
    ),

    // Type alias
    type_alias: $ => seq(
      optional($.visibility),
      'type',
      field('name', $.type_identifier),
      optional($.type_parameters),
      '=',
      field('type', $._type),
    ),

    // Import declaration
    import_declaration: $ => seq(
      'import',
      $.import_path,
    ),

    import_path: $ => choice(
      // import std.io
      seq($.module_path, optional(seq('as', $.identifier))),
      // import std.io.{print, println}
      seq($.module_path, '.', $.import_group),
      // import std.io.*
      seq($.module_path, '.', '*'),
    ),

    module_path: $ => prec.left(seq(
      optional(repeat1(choice('.', '..'))),
      $.identifier,
      repeat(seq('.', $.identifier)),
    )),

    import_group: $ => seq(
      '{',
      commaSep1(choice(
        seq($.identifier, 'as', $.identifier),
        $.identifier,
      )),
      optional(','),
      '}',
    ),

    // Use declaration (alternative syntax)
    use_declaration: $ => seq(
      'use',
      $.use_path,
    ),

    use_path: $ => choice(
      seq($.namespace_path, optional(seq('as', $.identifier))),
      seq($.namespace_path, '::', $.import_group),
      seq($.namespace_path, '::', '*'),
    ),

    namespace_path: $ => prec.left(seq(
      $.identifier,
      repeat(seq('::', $.identifier)),
    )),

    // =========================================================================
    // STATEMENTS
    // =========================================================================

    _statement: $ => choice(
      $._expression_statement,
      $.variable_declaration,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.while_statement,
      $.for_statement,
      $.loop_statement,
      $.try_statement,
      $.spawn_statement,
      $.select_statement,
      $.block,
    ),

    return_statement: $ => prec.right(seq(
      'return',
      optional($._expression),
    )),

    block: $ => seq(
      '{',
      repeat($._statement),
      '}',
    ),

    // =========================================================================
    // EXPRESSIONS
    // =========================================================================

    _expression: $ => choice(
      $._literal,
      $.identifier,
      $.self_expression,
      $.super_expression,
      $.this_expression,
      $.group_expression,
      $.binary_expression,
      $.unary_expression,
      $.assignment_expression,
      $.compound_assignment_expression,
      $.call_expression,
      $.method_call_expression,
      $.member_expression,
      $.index_expression,
      $.array_expression,
      $.tuple_expression,
      $.map_expression,
      $.struct_expression,
      $.lambda_expression,
      $.if_expression,
      $.match_expression,
      $.range_expression,
      $.cast_expression,
      $.type_check_expression,
      $.try_expression,
      $.receive_expression,
      $.send_expression,
      $.optional_chain_expression,
      $.null_coalesce_expression,
      $.increment_expression,
      $.decrement_expression,
      $.new_expression,
      $.path_expression,
      $.generic_function,
    ),

    binary_expression: $ => choice(
      prec.left(PREC.OR, seq($._expression, '||', $._expression)),
      prec.left(PREC.AND, seq($._expression, '&&', $._expression)),
      prec.left(PREC.BIT_OR, seq($._expression, '|', $._expression)),
      prec.left(PREC.BIT_XOR, seq($._expression, '^', $._expression)),
      prec.left(PREC.BIT_AND, seq($._expression, '&', $._expression)),
      prec.left(PREC.EQUALITY, seq($._expression, choice('==', '!='), $._expression)),
      prec.left(PREC.COMPARISON, seq($._expression, choice('<', '>', '<=', '>='), $._expression)),
      prec.left(PREC.SHIFT, seq($._expression, choice('<<', '>>', '>>>'), $._expression)),
      prec.left(PREC.ADD, seq($._expression, choice('+', '-'), $._expression)),
      prec.left(PREC.MULTIPLY, seq($._expression, choice('*', '/', '%'), $._expression)),
      prec.right(PREC.POWER, seq($._expression, '**', $._expression)),
    ),

    assignment_expression: $ => prec.right(PREC.ASSIGN, seq(
      field('left', choice($.identifier, $.member_expression, $.index_expression)),
      '=',
      field('right', $._expression),
    )),

    member_expression: $ => prec.left(PREC.MEMBER, seq(
      field('object', $._expression),
      '.',
      field('member', $.identifier),
    )),

    // Optional chaining
    struct_expression: $ => prec(PREC.CALL, seq(
      field('type', choice($.type_identifier, $.path_expression)),
      '{',
      optional(seq(
        commaSep1($.struct_field_initializer),
        optional(','),
      )),
      '}',
    )),

    struct_field_initializer: $ => choice(
      seq(field('name', $.identifier), ':', field('value', $._expression)),
      seq('..', $._expression),
      $.identifier,
    ),

    // Lambda expression
    self_expression: $ => 'self',
    _type: $ => choice(
      $.primitive_type,
      $.type_identifier,
      $.generic_type,
      $.array_type,
      $.tuple_type,
      $.function_type,
      $.optional_type,
      $.path_type,
      $.self_type,
    ),

    primitive_type: $ => choice(
      'int',
      'int8',
      'int16',
      'int32',
      'int64',
      'uint',
      'uint8',
      'uint16',
      'uint32',
      'uint64',
      'float',
      'float32',
      'float64',
      'bool',
      'string',
      'char',
      'void',
    ),

    type_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    generic_type: $ => prec(1, seq(
      $.type_identifier,
      $.type_arguments,
    )),

    type_arguments: $ => seq(
      '<',
      commaSep1($._type),
      optional(','),
      '>',
    ),

    array_type: $ => seq('[', $._type, ']'),

    self_type: $ => 'Self',

    // Type parameters
    type_parameters: $ => seq(
      '<',
      commaSep1($.type_parameter),
      optional(','),
      '>',
    ),

    type_parameter: $ => seq(
      field('name', $.type_identifier),
      optional(seq(':', commaSep1($.trait_bound, '+'))),
    ),

    trait_bound: $ => choice(
      $.type_identifier,
      $.generic_type,
      $.path_type,
    ),

    where_clause: $ => seq(
      'where',
      commaSep1($.where_predicate),
    ),

    where_predicate: $ => seq(
      $.type_identifier,
      ':',
      commaSep1($.trait_bound, '+'),
    ),

    // =========================================================================
    // LITERALS
    // =========================================================================

    integer_literal: $ => token(choice(
      // Decimal with optional suffix
      seq(
        /[0-9][0-9_]*/,
        optional(/[iu](8|16|32|64)?/),
      ),
      // Hexadecimal
      seq(
        /0[xX][0-9a-fA-F][0-9a-fA-F_]*/,
        optional(/[iu](8|16|32|64)?/),
      ),
      // Octal
      seq(
        /0[oO][0-7][0-7_]*/,
        optional(/[iu](8|16|32|64)?/),
      ),
      // Binary
      seq(
        /0[bB][01][01_]*/,
        optional(/[iu](8|16|32|64)?/),
      ),
    )),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $.string_content,
        $.escape_sequence,
        $.string_interpolation,
      )),
      '"',
    ),

    string_content: $ => token.immediate(prec(1, /[^"\\$]+/)),

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    visibility: $ => choice('pub', 'priv', 'internal'),
